--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-three/drei": "^9.111.3",
     "@react-three/fiber": "^8.17.5",
     "@tanstack/react-query": "^5.51.15",
+    "@vercel/analytics": "^1.3.2",
     "browser-image-compression": "^2.0.2",
     "cors": "^2.8.5",
     "firebase": "^10.12.2",
